# helium

./: .gitignore  COMPILERDOCS.md  CONTRIBUTORS.md  CREDITS.txt  DIFFERENCESWITHHASKELL98.md  HELIUM.md  HINT.md  HeliumSetup.s2g  KNOWNBUGS.md  LAYOUTRULE.md  PUBLICATIONS.md  README.md  RELEASENOTES.txt  TEXTHINT.md  TODO-BUGS  TOUROFTHEPRELUDE.html  TOUROFTHEPRELUDE.md  compile  configure  configure.in  fosstyle.css  helium.cabal  hint.conf  package.yaml  stack.yaml  svn-ignore
.stack-work/: stack.sqlite3
demo/: Bug.hs  Calendar.hs  ParserDemo.hs  ParserLibrary.hs  Record.hs  RecordFail.hs  RecordSuccess.hs  Sieve.hs  TicTacToe.hs
develop/: FibCore.core  Hoi  Hoi.hs  Hoi.region  Thunk  Thunk.hs  a.out
dimension-tests/bad/: datadim.hs  dimensionadd1.hs  dimensionedvar.hs  dimensionsub1.hs  dimint.hs  dimnotsimple.hs  dimstring.hs  dimvar.hs  duplicateddim.hs  duplicatedunit.hs  duplicatedunit2.hs  duplicatedunit3.hs  recursivedef.hs  undefined.hs  undefined2.hs  unitvaralias.hs  unitvarderfrom.hs
dimension-tests/good/: clear  dimdiv.hs  dimension.desugared.core.save  dimension.hs  dimensionedvar1.hs  dimensionedvar2.hs  dimensionedvar3.hs  dimensionedvar4.hs  dimensionedvar5.hs  dimensionedvar6.hs  dimensionedvarfun.hs  dimmult.hs  dimpow.hs  dimpow1.hs  dimpow2.hs  dimpowneg.hs  dimpowpar.hs  exec  hertz.hs  hertz2.hs  nodim.hs  questionMark.hs  test.hs  twodimensionedvar.hs  typedimdecl.hs  typedimdecl1.hs  typedimdecl2.hs  unitdiv.hs  unitfrom1.hs  unitmult.hs  unitmultipleop.hs  unitone.hs  unitonealias.hs  unitonediv.hs  unitonepow.hs  unitpar.hs  unitpow.hs  unitpowneg.hs  unitpowpar.hs  unitvar.hs
dist-newstyle/cache/: compiler  config
docs/: BBL.txt  Helium Technical report.html  HeliumDiffHaskell98.html  INSTALL.txt  Loc.hs  MoreToDo.txt  PreludeDiffs.hs  Report.book  Simple1.hs  Simple2.hs  Simple3.hs  TODO.txt  WanneerFaaltPatroonherkenning.html  helium-wiki.in  install.tex  known-issues.md  tagHistory.txt  typeclasses-qualified.md
docs/poster/: Poster.doc  Poster.hs  Poster.ppt  bench2.eps  toekomst.ppt  typegraph.eps  uusol.eps
docs/wiki-material/: Hello.hs  Hello2.hs  Hint2.hs  README  Simple4.hs  helium-wiki.in
lib/: Char.hs  Char.lvm  Dimensions.hs  Foreign.hs  HeliumLang.core  HeliumLang.lvm  IridiumLang.iridium  IridiumLangEval.iridium  IridiumLangString.iridium  List.hs  List.lvm  LvmException.core  LvmIO.core  LvmIO.lvm  LvmLang.core  LvmLang.lvm  Makefile  Makefile.in  Maybe.hs  Maybe.lvm  Prelude.hs  Prelude.lvm  Prelude.type  PreludeA.hs  PreludeIO.hs  PreludePrim.core  PreludePrim.lvm  Preludefull.hs  Preludemin.hs  Test.hs
lib/IridiumLang/: Eval.iridium  String.iridium
lib/runtime/: memory.c  runtime.c
lib/simple/: Char.hs  Char.lvm  HeliumLang.core  HeliumLang.lvm  List.hs  List.lvm  LvmException.lvm  LvmIO.core  LvmLang.core  Makefile.in  Maybe.hs  Maybe.lvm  Prelude.hs  Prelude.lvm  Prelude.type  PreludePrim.core  PreludePrim.lvm
src/: Makefile  Makefile.in  hint.conf  prologue.txt  startghci
src/CodeGeneration/: CodeGeneration.ag  CodeGeneration.hs  CoreToLvm.hs  CoreUtils.hs  DerivingEq.hs  DerivingShow.hs  PatternMatch.hs  ToCoreDecl.ag  ToCoreExpr.ag  ToCoreModule.ag  ToCoreName.ag  ToCorePat.ag
src/CodeGenerationNew/: DerivingShow.hs
src/Helium/: Main.hs
src/HeliumPath/: Main.hs
src/Interpreter/: Main.hs
src/InterpreterNew/: Hi.java
src/Main/: Args.hs  Compile.hs  CompileUtils.hs  Main.hs  PhaseCodeGenerator.hs  PhaseDesugarer.hs  PhaseImport.hs  PhaseKindInferencer.hs  PhaseLexer.hs  PhaseResolveOperators.hs  PhaseStaticChecks.hs  PhaseTypeInferencer.hs  PhaseTypingStrategies.hs  Version.hs
src/MainNew/: Args.hs  PhaseDesugarer.hs  PhaseParser.hs  PhaseStaticChecks.hs  PhaseTypingStrategies.hs
src/ModuleSystem/: CoreToImportEnv.hs  DictionaryEnvironment.hs  ExtractImportDecls.ag  ExtractImportDecls.hs  ImportEnvironment.hs
src/ModuleSystemNew/: CoreToImportEnv.hs  ExtractImportDecls.ag
src/Parser/: CollectFunctionBindings.hs  LayoutRule.hs  Lexer.hs  LexerMessage.hs  LexerMonad.hs  LexerToken.hs  OperatorTable.hs  ParseLibrary.hs  ParseMessage.hs  Parser.hs  ResolveOperators.ag  ResolveOperators.hs
src/ParserNew/: ParseLibrary.hs  ResolveOperators.hs
src/RunHelium/: Main.hs
src/Syntax/: UHA_OneLine.ag  UHA_OneLine.hs  UHA_Pretty.ag  UHA_Pretty.hs  UHA_Range.hs  UHA_Syntax.ag  UHA_Syntax.hs  UHA_Utils.hs
src/TextHint/: ConfigFile.hs  Main.hs
src/Utils/: Logger.hs  OSSpecific.hs.in  OneLiner.hs  Similarity.hs  Texts.hs  Utils.hs
src/UtilsNew/: Logger.hs
src/codegeneration/: CodeGeneration.ag  CodeGeneration.hs  CoreToLvm.hs  CoreUtils.hs  DerivingEq.hs  DerivingShow.hs  PatternMatch.hs  ToCoreDecl.ag  ToCoreExpr.ag  ToCoreModule.ag  ToCoreName.ag  ToCorePat.ag
src/interpreter/: Hi.java  Main.hs
src/main/: Args.hs  Compile.hs  CompileUtils.hs  Main.hs  PhaseCodeGenerator.hs  PhaseDesugarer.hs  PhaseImport.hs  PhaseKindInferencer.hs  PhaseLexer.hs  PhaseParser.hs  PhaseResolveOperators.hs  PhaseStaticChecks.hs  PhaseTypeInferencer.hs  PhaseTypingStrategies.hs  Version.hs
src/modulesystem/: CoreToImportEnv.hs  DictionaryEnvironment.hs  EnvironmentSynonyms.hs  ExtractImportDecls.ag  ExtractImportDecls.hs  ImportEnvironment.hs
src/parser/: CollectFunctionBindings.hs  HaskellLexer.hs  LayoutRule.hs  Lexer.hs  LexerMessage.hs  LexerMonad.hs  LexerToken.hs  OperatorTable.hs  ParseCommon.hs  ParseDeclExp.hs  ParseImportExport.hs  ParseLibrary.hs  ParseMessage.hs  ParsePat.hs  ParseType.hs  ParsecLayout.hs  Parser.hs  ResolveOperators.ag  ResolveOperators.hs
src/staticanalysis/: StaticAnalysis.ag  StaticAnalysis.hs
src/syntax/: UHA_OneLine.ag  UHA_OneLine.hs  UHA_Pretty.ag  UHA_Pretty.hs  UHA_Range.ag  UHA_Range.hs  UHA_Self.ag  UHA_Size.ag  UHA_Syntax.ag  UHA_Syntax.hs  (+1 more)
test/: MakeOutput  MakeOutputGADT  MakeOutputPhase  MakeOutputTI  MakeOutputsC  MakeOutputsSE  MakeOutputsSW  MakeOutputsTCP  MakeOutputsTE  compileAndRun  makeOne  phaseAndRun  testAll  testC  testCQ  testEx  testGADT  testM  testOne  testOnePhase  testP  testR  testSE  testSW  testTC  testTE  testTI  testTh
(+2593 files in other folders)
