name:                   helium
version:                1.8
synopsis:               The Helium Compiler.
homepage:               http://www.cs.uu.nl/wiki/bin/view/Helium/WebHome
description:

  Helium is a compiler for a subset of Haskell that aims at delivering high
  quality type error messages particularly for beginner programmers. It also
  includes facilities for specializing type error diagnosis for embedded domain
  specific languages. The compiler supports Haskell 98, but without the ability
  to define new type classes and instances.

category:               Compiler
copyright:              (c) 2014
license:                GPL
license-file:           LICENSE.txt
author:                 Bastiaan Heeren, Jurriaan Hage
maintainer:             helium@cs.uu.nl
stability:              provisional
extra-source-files:     CREDITS.txt
build-type:             Simple
cabal-version:          >= 1.10.1.0
tested-with:            GHC == 7.6.3
data-files:
  lib/Char.hs
  lib/HeliumLang.core
  lib/List.hs
  lib/LvmException.core
  lib/LvmIO.core
  lib/LvmLang.core
  lib/Makefile
  lib/Maybe.hs
  lib/Prelude.hs
  lib/Prelude.type
  lib/PreludePrim.core
  lib/simple/Char.hs
  lib/simple/HeliumLang.core
  lib/simple/List.hs
  lib/simple/LvmException.core
  lib/simple/LvmIO.core
  lib/simple/LvmLang.core
  lib/simple/Makefile
  lib/simple/Maybe.hs
  lib/simple/Prelude.hs
  lib/simple/Prelude.type
  lib/simple/PreludePrim.core
  hint.conf

source-repository head
  type:     svn
  location: https://subversion.cs.uu.nl/repos/staff.jur.Top/trunk
  
--------------------------------------------------------------------------------

Executable helium
  Build-Depends:     base >= 3 && < 5, containers, mtl, parsec, network, process, transformers, filepath, directory, wl-pprint, Top >= 1.7, lvmlib >= 1.0
  ghc-options:       -Wall
  default-language:  Haskell98
  hs-source-dirs:    src
  Main-is:           Helium/Main.hs
  other-modules:     Paths_helium
  
--------------------------------------------------------------------------------

Executable texthint
  Build-Depends:     base >= 3 && < 5, containers, mtl, filepath, parsec, directory, process
  ghc-options:       -Wall
  default-language:  Haskell98
  hs-source-dirs:    src
  Main-is:           TextHint/Main.hs
  other-modules:     Paths_helium
  
--------------------------------------------------------------------------------

Executable runhelium
  Build-Depends:     base >= 3 && < 5, containers, filepath, directory, parsec, process
  ghc-options:       -Wall
  default-language:  Haskell98
  hs-source-dirs:    src
  Main-is:           RunHelium/Main.hs
  other-modules:     Paths_helium

--------------------------------------------------------------------------------

Library
  Build-Depends:     base >= 3 && < 5, containers, mtl, parsec, network, process, transformers, filepath, directory, wl-pprint, Top >= 1.7, lvmlib >= 1.0
  ghc-options:       -Wall
  default-language:  Haskell98
  hs-source-dirs:    src


  Exposed-modules:
    Helium.CodeGeneration.CodeGeneration
    Helium.CodeGeneration.CoreToLvm
    Helium.CodeGeneration.CoreUtils
    Helium.CodeGeneration.DerivingEq
    Helium.CodeGeneration.DerivingShow
    Helium.CodeGeneration.PatternMatch
    Helium.Main.Args
    Helium.Main.Compile
    Helium.Main.CompileUtils
    Helium.Main.PhaseCodeGenerator
    Helium.Main.PhaseDesugarer
    Helium.Main.PhaseImport
    Helium.Main.PhaseKindInferencer
    Helium.Main.PhaseLexer
    Helium.Main.PhaseParser
    Helium.Main.PhaseResolveOperators
    Helium.Main.PhaseStaticChecks
    Helium.Main.PhaseTypeInferencer
    Helium.Main.PhaseTypingStrategies
    Helium.Main.Version
    Helium.ModuleSystem.CoreToImportEnv
    Helium.ModuleSystem.DictionaryEnvironment
    Helium.ModuleSystem.ExtractImportDecls
    Helium.ModuleSystem.ImportEnvironment
    Helium.Parser.CollectFunctionBindings
    Helium.Parser.LayoutRule
    Helium.Parser.Lexer
    Helium.Parser.LexerMessage
    Helium.Parser.LexerMonad
    Helium.Parser.LexerToken
    Helium.Parser.OperatorTable
    Helium.Parser.ParseLibrary
    Helium.Parser.ParseMessage
    Helium.Parser.Parser
    Helium.Parser.ResolveOperators
    Helium.StaticAnalysis.Directives.Matchers
    Helium.StaticAnalysis.Directives.TS_Analyse
    Helium.StaticAnalysis.Directives.TS_Apply
    Helium.StaticAnalysis.Directives.TS_Attributes
    Helium.StaticAnalysis.Directives.TS_Compile
    Helium.StaticAnalysis.Directives.TS_CoreSyntax
    Helium.StaticAnalysis.Directives.TS_Messages
    Helium.StaticAnalysis.Directives.TS_Parser
    Helium.StaticAnalysis.Directives.TS_Syntax
    Helium.StaticAnalysis.Directives.TS_ToCore
    Helium.StaticAnalysis.Heuristics.HeuristicsInfo
    Helium.StaticAnalysis.Heuristics.ListOfHeuristics
    Helium.StaticAnalysis.Heuristics.OnlyResultHeuristics
    Helium.StaticAnalysis.Heuristics.RepairHeuristics
    Helium.StaticAnalysis.Heuristics.TieBreakerHeuristics
    Helium.StaticAnalysis.Heuristics.UnifierHeuristics
    Helium.StaticAnalysis.Inferencers.BindingGroupAnalysis
    Helium.StaticAnalysis.Inferencers.ExpressionTypeInferencer
    Helium.StaticAnalysis.Inferencers.KindInferencing
    Helium.StaticAnalysis.Inferencers.SelectConstraintSolver
    Helium.StaticAnalysis.Inferencers.TypeInferencing
    Helium.StaticAnalysis.Messages.HeliumMessages
    Helium.StaticAnalysis.Messages.Information
    Helium.StaticAnalysis.Messages.KindErrors
    Helium.StaticAnalysis.Messages.Messages
    Helium.StaticAnalysis.Messages.StaticErrors
    Helium.StaticAnalysis.Messages.TypeErrors
    Helium.StaticAnalysis.Messages.Warnings
    Helium.StaticAnalysis.Miscellaneous.ConstraintInfo
    Helium.StaticAnalysis.Miscellaneous.DoublyLinkedTree
    Helium.StaticAnalysis.Miscellaneous.TypeConstraints
    Helium.StaticAnalysis.Miscellaneous.TypeConversion
    Helium.StaticAnalysis.Miscellaneous.TypesToAlignedDocs
    Helium.StaticAnalysis.Miscellaneous.UHA_Source
    Helium.StaticAnalysis.StaticChecks.StaticChecks
    Helium.Syntax.UHA_OneLine
    Helium.Syntax.UHA_Pretty
    Helium.Syntax.UHA_Range
    Helium.Syntax.UHA_Syntax
    Helium.Syntax.UHA_Utils
    Helium.Utils.Logger
    Helium.Utils.OSSpecific
    Helium.Utils.OneLiner
    Helium.Utils.Similarity
    Helium.Utils.Texts
    Helium.Utils.Utils


 
